--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #fef3e2; 
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     height: 100vh;
   }
@@ -19,6 +19,7 @@ body {
     border-radius: 10px;
     width: 80%;
     position: relative; 
+    display: flex;
   }
   
   .pastry {
@@ -35,26 +36,30 @@ body {
   }
   
   .pastry1 { /* Cookie */
-    top: 0;
-    left: 0;
+    top: 20%;
+    left: 25%;
+    transform: translate(-50, -50%);
     background-color: #f0bb7f; 
   }
   
   .pastry2 { /* Brownie */
-    top: 0;
-    right: 0;
+    top: 20%;
+    right: 85%;
+    transform: translate(-50, -50%);
     background-color: #7f553f; 
   }
   
   .pastry3 { /* Cupcake */
-    bottom: 0;
-    left: 0;
+    bottom:20%;
+    left: 55%;
+    transform: translate(-50, -50%);
     background-color: #f0a8be; 
   }
   
   .pastry4 { /* Jelly Roll */
-    bottom: 0;
-    right: 0;
+    bottom: 20%;
+    right: 3%;
+    transform: translate(-50, -50%);
     background-color: #7fa8f0; 
   }
   
